# ifmo

./: .gitignore  Makefile  README.md  report.tex
1 year/: ANKETA_2016.docx  README.md  Spisok_gruppy_na_04_09.rtf
1 year/computer science/: README.md
1 year/discrete math/: README.md
1 year/foreign language/: README.md
1 year/hardware computing/: README.md
1 year/history/: README.md
1 year/introduction to the specialty/: README.md
1 year/mathematical foundations of cryptology/: README.md
1 year/mathematics/: README.md
1 year/probability theory and mathematical statistics/: README.md
1 year/Введение в специальность/: Практ занятия по ВВС 10 03 01.doc  Практическая работа №1.docx  Практическая работа №2.docx
1 year/История/: ~$сход Вручную - Contact Us.docx  Николай II.docx  Первая русская революция.docx  Реферат по Николаю II.docx
1 year/КСЕ/: ~$бораторная работа 1.docx  ~$разец оформл. ЛР.docx  Введение в космогонию.djvu  Вторая лабораторная.docx  Концепции космологии.pptx  Лабораторная работа №1.docx  Лабораторная работа №2.docx  Лабораторная работа №5.docx  Образец оформления лабораторных работ.docx  Первая лабораторная.docx  Четвёртая лабораторная.docx  космология фридман.pptm
1 year/Криптология/: 19.KVychet.doc
1 year/Математика/: tasks.tex  tickets.tex
2 year/: Obyasnitelnaya_do_1_aprelya_2018g_prikaz967-od.rtf  README.md
3 year/: README.md
5 year/Методы оптимизации/Лабораторные/: 1.ipynb  1.py  gen.csv  pyproject.toml
parts/: 00-title.tex
templates/: README.md
Публикации/: ИБ-2017.pptx  ИБ-2019.pptx
Шаблоны/: lab.tex
(+1189 files in other folders)
